--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -2,19 +2,20 @@
     background: #fff;
 }
 
-.header__inner {
-    margin: 0 auto;
-    padding: 20px 15px;
-    max-width: 1230px;
-}
-
 .header-utilities {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    position: relative;
+}
+
+.header__inner {
+    padding: 20px 15px;
+    max-width: 500px;
 }
 
 .header__logo {
+    margin: 0 auto;
     color: #ff9d00c0;
     align-items: center;
     text-decoration: none;
@@ -22,13 +23,10 @@
     font-size: 24px;
 }
 
-.header-utilities nav {
-    width: 18%;
-}
-
 .header-nav {
     align-items: center;
     justify-content: space-between;
+    float: right;
 }
 
 .header-nav__link {
@@ -37,9 +35,14 @@
 }
 
 .header-nav__button {
-    border: none;
-    background: transparent;
+    position: absolute;
+    right: 50px;
+    padding: 5px 20px;
+    align-items: center;
+    border: 2px solid #fcd4aa;
+    background-color: rgba(254, 213, 174, 0.435);
     color: #fcd4aa;
     font-size: 16px;
     cursor: pointer;
+
 }
