--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,69 +1,90 @@
-.attendance__alert--success {
-    padding: 10px 30px;
-    border-color: #badbcc;
-    background-color: #d1e7dd;
-    color: #0f5132;
+body {
+    background-color: bisque;
 }
 
-.attendance__alert--danger {
-    padding: 10px 0;
-    border-color: #f5c2c7;
-    background-color: #f8d7da;
-    color: #842029;
-}
-
-.attendance__alert--danger ul {
-    margin: 0;
-}
-
-.attendance__panel {
+.register-form {
+    width: 960px;
     margin: 0 auto;
-    width: 70%;
 }
 
-.attendance__button {
-    width: 100%;
-    text-align: center;
+.register-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(231, 144, 39);
+    font-size: 24px;
 }
 
-.attendance__button-submit {
-    padding: 5px;
-    width: 30%;
-    height: 50px;
+.register-form__inner {
+    width: 960px;
+    margin: 0 auto;
+    background-color: #fff;
+}
+
+.username-form {
+    width: 600px;
+    margin: 0 auto;
+    padding: 40px 0px;
+}
+
+.username {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.username__item input {
+    width: 600px;
+    height: 40px;
+    background-color: rgba(119, 119, 119, 0.385);
     border: none;
-    border-radius: 3px;
-    background: #000;
-    color: #fff;
-    cursor: pointer;
 }
 
-.attendance__content {
+.email-form {
+    width: 600px;
     margin: 0 auto;
-    padding: 30px 15px;
-    max-width: 1230px;
+    padding: 40px 0px;
 }
 
-.attendance-table {
-    margin: 30px auto;
-    width: 70%;
-    text-align: center;
+.email {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
-.attendance-table__inner {
-    width: 100%;
+.email__item input {
+    width: 600px;
+    height: 40px;
+    background-color: rgba(119, 119, 119, 0.385);
+    border: none;
 }
 
-.attendance-table__row {
-    border-bottom: 1px solid #ddd;
+.password-form {
+    width: 600px;
+    margin: 0 auto;
+    padding: 40px 0px;
 }
 
-.attendance-table__header {
-    padding: 12px;
-    width: 20%;
-    font-weight: bold;
+.password {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
-.attendance-table__item {
-    padding: 12px;
-    width: 20%;
+.password__item input {
+    width: 600px;
+    height: 40px;
+    background-color: rgba(119, 119, 119, 0.385);
+    border: none;
+}
+
+.register__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 40px;
+}
+.register__button-submit {
+    width: 200px;
+    height: 60px;
+    font-size: 24px;
+    color: #fff;
+    background-color: rgb(88, 48, 48);
 }
